--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -17,9 +17,9 @@ jobs:
         uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: ${{ github.repository_owner }}
-          gif_out_path: ./assets/github-contribution-grid-snake.gif
-          svg_out_path: ./assets/github-contribution-grid-snake.svg
+          github_user_name: TOTHTOT  # 确保这个用户名是正确的
+          gif_out_path: dist/github-snake.gif
+          svg_out_path: dist/github-snake.svg
 
       - name: Push to GitHub
         uses: EndBug/add-and-commit@v7.2.1
